# kan

./: .cspell.json  .prettierignore  CMakeLists.txt  LICENSE  README.md  triangles.cpp  triangles.vert  vgl.h
.github/ISSUE_TEMPLATE/: bug.yaml  enhancement.yaml
.github/workflows/: build.yaml
demo/: CMakeLists.txt  LoadShaders.cpp  README.md  triangles.cpp  triangles.frag
igloo/: CMakeLists.txt
igloo/igloo/: shaders.h
igloo/igloo/shaders/: program.cpp  program.h  shader.cpp  shader.h
kan/: CMakeLists.txt
kan/kan/: particle_system.cpp  particle_system.h
