cmake_minimum_required(VERSION 3.21)
project(kan LANGUAGES CXX)
find_package(GLUT REQUIRED)
find_package(GLEW REQUIRED)
find_package(OpenGL REQUIRED)
add_executable(kan triangles.cpp LoadShaders.cpp LoadShaders.h)
target_compile_options(kan PRIVATE -fsanitize=address)
target_link_libraries(kan PRIVATE GLUT::GLUT GLEW::GLEW OpenGL::GL)
target_link_options(kan PRIVATE -fsanitize=address)
# add_subdirectory(kan)