cmake_minimum_required(VERSION 3.21)
project(kan LANGUAGES CXX)
find_package(GLUT REQUIRED)
find_package(GLEW REQUIRED)
find_package(OpenGL REQUIRED)
add_subdirectory(igloo)
add_executable(demo triangles.cpp LoadShaders.cpp LoadShaders.h)
target_link_libraries(demo PRIVATE GLUT::GLUT GLEW::GLEW OpenGL::GL igloo::igloo)
configure_file(triangles.vert "${kan_BINARY_DIR}" COPYONLY)
configure_file(triangles.frag "${kan_BINARY_DIR}" COPYONLY)
# add_subdirectory(kan)